sample/msvc/error/c2139.cpp
class C;
int main()
{
    __is_polymorphic(C);
    return 0;
}
